--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +7,8 @@
 }
 
 html {
-  font-family: 'Lato', sans-serif;
+  /*font-family: 'Lato', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
 }
 
 /*nav*/
@@ -162,6 +164,8 @@ ul li a {
 /*About*/
 #about {
   background-color: #efefef;
+  -webkit-box-shadow: 1px 0 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 1px 0 5px rgba(0, 0, 0, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -223,6 +227,62 @@ ul li a {
 }
 
 /*end About*/
+/*Affiliates*/
+#aff {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+#aff h1 {
+  font-size: 4rem;
+  color: black;
+  font-weight: 400;
+  margin-top: 5rem;
+  text-transform: uppercase;
+}
+
+#aff .content_aff {
+  margin-top: 3rem;
+}
+
+#aff .content_aff .cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#aff .content_aff .cards .card {
+  padding: 3rem 3rem;
+}
+
+#aff .content_aff .cards .card img {
+  width: 250px;
+  height: 350px;
+}
+
+#aff .content_aff .cards .card .card_footer {
+  text-align: center;
+}
+
+#aff .content_aff .cards .card .card_footer p {
+  font-size: 1rem;
+}
+
+#aff .content_aff .cards .card .card_footer a {
+  font-size: .8rem;
+  color: #757575;
+}
+
+/*end Affiliates*/
 @media only screen and (max-width: 1000px) {
   .burger {
     display: block;
@@ -264,6 +324,9 @@ ul li a {
   ul li {
     margin: 15px;
   }
+  #landing p {
+    font-size: .9rem;
+  }
   #about {
     width: 100%;
   }
@@ -300,6 +363,15 @@ ul li a {
     width: 90%;
     text-align: center;
     margin-bottom: 5rem;
+  }
+  #aff h1 {
+    font-size: 1.5rem;
+  }
+  #aff .content_aff .cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=style.css.map */
