--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @mixin small {
     @media only screen and (max-width: 1000px) {
         @content;
@@ -14,7 +16,8 @@
 }
 
 html {
-    font-family: 'Lato', sans-serif;
+    /*font-family: 'Lato', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -154,6 +157,7 @@ ul {
 
 #about {
     background-color: #efefef;
+    box-shadow: 1px 0 5px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -196,6 +200,54 @@ ul {
 }
 
 /*end About*/
+/*Affiliates*/
+#aff {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+
+    h1 {
+        font-size: 4rem;
+        color: black;
+        font-weight: 400;
+        margin-top: 5rem;
+        text-transform: uppercase;
+    }
+
+    .content_aff {
+        margin-top: 3rem;
+
+        .cards {
+            display: flex;
+
+            .card {
+                padding: 3rem 3rem;
+
+                img {
+                    width: 250px;
+                    height: 350px;
+                }
+
+                .card_footer {
+                    text-align: center;
+
+                    p {
+                        font-size: 1rem;
+                    }
+
+                    a {
+                        font-size: .8rem;
+                        color: #757575;
+
+                    }
+                }
+            }
+        }
+    }
+}
+
+/*end Affiliates*/
 
 
 
@@ -290,6 +342,12 @@ ul {
         margin: 15px;
     }
 
+    #landing {
+        p {
+            font-size: .9rem;
+        }
+    }
+
     #about {
         width: 100%;
 
@@ -318,6 +376,18 @@ ul {
                 width: 90%;
                 text-align: center;
                 margin-bottom: 5rem;
+            }
+        }
+    }
+
+    #aff {
+        h1 {
+            font-size: 1.5rem;
+        }
+
+        .content_aff {
+            .cards {
+                flex-direction: column;
             }
         }
     }
