--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @mixin small {
@@ -16,10 +14,8 @@
 }
 
 html {
-    /*font-family: 'Lato', sans-serif; */
     font-family: 'Montserrat', sans-serif;
 }
-
 
 /*nav*/
 
@@ -127,6 +123,10 @@ ul {
         color: white;
         margin-bottom: .5rem;
         text-shadow: 5px 5px 1rem rgba(0, 0, 0, 0.655);
+
+        span {
+            animation: show ease-in-out forwards 2s;
+        }
     }
 
     p {
@@ -144,10 +144,6 @@ ul {
         transform: translate(-50%, 0%);
         color: white;
         font-size: 2.5rem;
-
-        &:hover {
-            color: black;
-        }
     }
 }
 
@@ -166,7 +162,7 @@ ul {
     margin: 0 auto;
 
     h1 {
-        font-size: 4rem;
+        font-size: 3.5rem;
         color: #757575;
         font-weight: 400;
         margin-top: 5rem;
@@ -182,7 +178,7 @@ ul {
         p {
             text-align: right;
             font-size: 1.2rem;
-            margin: 0 auto;
+            margin: 0 auto 2rem auto;
             width: 50%;
         }
 
@@ -194,13 +190,16 @@ ul {
 
             svg {
                 margin-bottom: 2rem;
+                height: 100px;
             }
         }
     }
 }
 
 /*end About*/
+
 /*Affiliates*/
+
 #aff {
     display: flex;
     flex-direction: column;
@@ -208,7 +207,7 @@ ul {
     height: 100%;
 
     h1 {
-        font-size: 4rem;
+        font-size: 3.5rem;
         color: black;
         font-weight: 400;
         margin-top: 5rem;
@@ -224,7 +223,13 @@ ul {
             .card {
                 padding: 3rem 3rem;
 
+                .card_title {
+                    text-align: center;
+                    margin-bottom: 1rem;
+                }
+
                 img {
+                    border-radius: 20px;
                     width: 250px;
                     height: 350px;
                 }
@@ -304,7 +309,7 @@ ul {
 
 
 
-
+/* media */
 @include small {
 
     .burger {
@@ -352,7 +357,7 @@ ul {
         width: 100%;
 
         h1 {
-            font-size: 1.5rem;
+            font-size: 2rem;
         }
 
         .content_about {
@@ -382,7 +387,7 @@ ul {
 
     #aff {
         h1 {
-            font-size: 1.5rem;
+            font-size: 2rem;
         }
 
         .content_aff {
@@ -392,4 +397,73 @@ ul {
         }
     }
 
+}
+
+
+
+
+
+
+/* ObserverJS */
+
+.anim {
+    opacity: 0;
+}
+
+.animup {
+    opacity: 0;
+}
+
+.animright {
+    opacity: 0;
+}
+
+.animation {
+    opacity: 0;
+}
+
+@keyframes anim1 {
+    from {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes animup {
+    from {
+
+        opacity: 0;
+    }
+
+    to {
+
+        opacity: 1;
+    }
+}
+
+@keyframes animright {
+    from {
+        transform: translateX(100px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes show {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
