--- a/css/style.scss
+++ b/css/style.scss
@@ -348,8 +348,12 @@ ul {
     }
 
     #landing {
+        h1 {
+            font-size: 1.2rem;
+        }
+
         p {
-            font-size: .9rem;
+            font-size: .7rem;
         }
     }
 
