--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
 /*nav*/
 nav {
-  background: white;
+  background: #73BCEB;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,7 +30,7 @@ nav {
 }
 
 nav h1 {
-  color: black;
+  color: white;
   font-size: 1.5rem;
   letter-spacing: .3rem;
   text-transform: uppercase;
@@ -56,7 +56,7 @@ nav h1 {
 }
 
 .burger .bar {
-  background-color: black;
+  background-color: white;
   position: absolute;
   left: 50%;
   -webkit-transform: translate(-50%, -50%) rotate(0deg);
@@ -97,7 +97,7 @@ ul li:hover {
 
 ul li a {
   margin-right: 1rem;
-  color: black;
+  color: white;
   position: relative;
   font-size: 1.2rem;
   text-decoration: none;
@@ -136,11 +136,6 @@ ul li a {
   text-shadow: 5px 5px 1rem rgba(0, 0, 0, 0.655);
 }
 
-#landing h1 span {
-  -webkit-animation: show ease-in-out forwards 2s;
-          animation: show ease-in-out forwards 2s;
-}
-
 #landing p {
   font-size: 1.3rem;
   letter-spacing: .3rem;
@@ -162,9 +157,9 @@ ul li a {
 /*end landing*/
 /*About*/
 #about {
-  background-color: #efefef;
-  -webkit-box-shadow: 1px 0 5px rgba(0, 0, 0, 0.5);
-          box-shadow: 1px 0 5px rgba(0, 0, 0, 0.5);
+  background-color: #73BCEB;
+  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.234);
+          box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.234);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -177,12 +172,13 @@ ul li a {
           align-items: center;
   height: 100%;
   width: 80%;
-  margin: 0 auto;
+  margin: 2rem auto 0 auto;
+  border-radius: 5px;
 }
 
 #about h1 {
   font-size: 3.5rem;
-  color: #757575;
+  color: #fff;
   font-weight: 400;
   margin-top: 5rem;
   text-transform: uppercase;
@@ -203,6 +199,7 @@ ul li a {
 }
 
 #about .content_about p {
+  color: #fff;
   text-align: right;
   font-size: 1.2rem;
   margin: 0 auto 2rem auto;
@@ -289,6 +286,38 @@ ul li a {
 }
 
 /*end Affiliates*/
+/*Passion*/
+#passion {
+  background-color: #73BCEB;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 3rem;
+}
+
+#passion img {
+  width: 250px;
+}
+
+#passion p {
+  width: 50%;
+  margin-top: 3rem;
+  color: white;
+  text-align: center;
+}
+
+/*end Passion*/
 /* media */
 @media only screen and (max-width: 1000px) {
   .burger {
@@ -303,7 +332,7 @@ ul li a {
             transform: translate(-50%, -150%) rotate(-225deg);
   }
   ul {
-    background: white;
+    background: #73BCEB;
     -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
             box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     -webkit-box-orient: vertical;
@@ -326,7 +355,7 @@ ul li a {
   ul.show {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    background: white;
+    background: #73BCEB;
   }
   ul li {
     margin: 15px;
@@ -338,6 +367,7 @@ ul li a {
     font-size: .7rem;
   }
   #about {
+    margin: 0 auto;
     width: 100%;
   }
   #about h1 {
@@ -382,6 +412,9 @@ ul li a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  #passion p {
+    width: 100%;
   }
 }
 
